# rift-mouth-tracker

./: .gitignore  CMakeLists.txt  Makefile  README.md  hack.sh  webcam.cpp  webcam.hpp
