list( APPEND CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")
cmake_minimum_required( VERSION 2.8 )
project( RiftMouthTracker )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( ./bin/webcam webcam.cpp)
target_link_libraries( ./bin/webcam ${OpenCV_LIBS} )
